
*********************************************************************************************
*                                  CHANGE LOG 1.0.1 - > 1.1.0                               *
*********************************************************************************************

 * (02/05/2012) kivan
	# 253
	
	CHANGED: way of creating experiment view is a bit different now (more separate classes) - necessary because of MouseListener in each table.
	CHANGED: HibernateUtil.rebind - new method for rebinding object which was not fully loaded from db (Lazy loading issue)
	ADDED: Double-click on experiment in EDEDB now opens dialog with basic information about experiment itself (not editable for now)

 * (01/26/2012) kivan
	# 252
	
	INTERNAL: SQL and DB structure changed - some tables now have field CHANGED due to comming need of sync files with EEG base
	CHANGED: added button of Import files (no functionality now), JerpaLang updated. Few minor bug fixes.

 * (01/25/2012) kivan
	# 251
	
	FIXED: fixed FileState of file, which is being downloaded
	"FIXED": EDEDB and its components fails to use Look And Feel as the rest of the app (??), at least mainPanel set manually

 * (01/25/2012) kivan
	# 250
	
	FIXED: dataFileDao - getter of data files by experiment objects - session issues
	CHANGED: added some javadoc, DataFiles from local DB can be now visualized in Signal Perspective.
	

 * (01/25/2012) kivan
	# 249
	
	CHANGED: updated JerpLang, Downloader now implements Language observable. Few code cleanings.
	FIXED: file download notification fixed (was showing null percents)

 * (01/24/2012) kivan
	# 248
	
	CHANGED: corrected few bugs (mostly in GUI), added some commentaries and javadoc. EDEDB still deeply unfunctional.
 
 * (01/24/2012) kivan
	# 247
	
	INTERNAL: Hibernate mapping now used in order to work with local DB. Created DAOs.

	EDEDB is now in "work-in-progress" state, plenty of bugs - commit was necessary
				in order to prevent potential data loss.
      